# BreakLibraryDebug

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/domain/: Book.py  BookCollection.py  IndexDict.py  ShelfOfBooks.py  consts.py
src/use_cases/: Library.py  PaidLibrary.py
tests/test_domain/: test_Book.py  test_BookCollection.py  test_IndexDict.py  test_ShelfOfBooks.py
tests/test_use_cases/: test_Library.py  test_PaidLibrary.py
